# wxctl

./: .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  README.md  install.ps1  install.sh
crates/wxctl/: Cargo.toml
crates/wxctl-compose/: Cargo.toml
crates/wxctl-compose-core/: Cargo.toml
crates/wxctl-compose-core/src/: data.rs  lib.rs  paths.rs  prompt.rs  prompt_body.rs  recipe.rs  templates.rs
crates/wxctl-compose-core/templates/prompts/: config-generation.md  data-generation.md  examples-agent.md  examples-wml.md  fix.md  identification.md  implementation.md  test-generation.md
crates/wxctl-compose-core/templates/schema/: reference-preamble.md
crates/wxctl-compose-core/tests/: carve_out_guard.rs
crates/wxctl-compose/src/: lib.rs  prompt.rs
crates/wxctl-compose/src/scaffold/: manifest.rs  mod.rs  stubs.rs  typemap.rs
crates/wxctl-core/: Cargo.toml
crates/wxctl-core/src/: interpolation.rs  lib.rs  paths.rs  response_id.rs
crates/wxctl-core/src/client/: factory.rs  http.rs  materializer.rs  mod.rs  multipart.rs  request.rs  retry.rs  token.rs
crates/wxctl-core/src/concurrency/: capacity.rs  config.rs  mod.rs
crates/wxctl-core/src/diagnose/: artifact.rs  bundle.rs  mod.rs  triage.rs  troubleshoot.rs
crates/wxctl-core/src/logging/: error_codes.rs  events.rs  http_helpers.rs  macros.rs  mod.rs  otel.rs  redaction.rs  run_record.rs
crates/wxctl-core/src/registry/: filters.rs  mod.rs  resource_registry.rs
crates/wxctl-core/src/traits/: mod.rs  reconciler.rs  resource_handler.rs
crates/wxctl-core/src/types/: config.rs  error.rs  mod.rs  resource.rs
crates/wxctl-engine/: Cargo.toml
crates/wxctl-engine/src/: context.rs  lib.rs  pipeline.rs
crates/wxctl-engine/src/execution/: dag_executor.rs  errors.rs  mod.rs  progress.rs  readiness.rs  resolution.rs  types.rs
crates/wxctl-engine/src/planning/: types.rs
crates/wxctl-engine/src/reconciliation/: mod.rs  pipeline.rs  references.rs  schema_reconciler.rs  types.rs
crates/wxctl-engine/src/templates/: compiler.rs  mod.rs  parser.rs  resolver.rs
crates/wxctl-engine/src/validation/: advisories.rs  mod.rs  pipeline.rs  types.rs
crates/wxctl-engine/tests/: dag_executor_resilience.rs  depends_on_e2e.rs  linkage_diagnostics.rs  reconcile_partial_resolution.rs  skip_destroy_emit.rs
crates/wxctl-graph/: Cargo.toml
crates/wxctl-graph/src/: dependency.rs  index_graph.rs  lib.rs  references.rs  resource_set.rs  types.rs
crates/wxctl-mcp/: Cargo.toml
crates/wxctl-mcp/src/: compose_tools.rs  config_input.rs  lib.rs  run_scope.rs  server.rs  tools.rs  tools_live.rs  tools_mutate.rs  tools_runs.rs
crates/wxctl-mcp/tests/: compose_scaffold_in_cwd.rs  compose_smoke.rs  runs_smoke.rs  startup_smoke.rs  surface_tool_conformance.rs
crates/wxctl-providers/: Cargo.toml
crates/wxctl-providers/src/: lib.rs  local_hash.rs  macros.rs  util.rs
crates/wxctl-providers/src/cloud_object_storage/: aigov_bucket.rs  common.rs  cos_client.rs  mod.rs
crates/wxctl-providers/src/common_core/: mod.rs
crates/wxctl-providers/src/concert/: mod.rs
crates/wxctl-providers/src/concert_workflows/: mod.rs
crates/wxctl-providers/src/factsheets/: mod.rs
crates/wxctl-providers/src/instana/: mod.rs
crates/wxctl-providers/src/local/: mod.rs
crates/wxctl-providers/src/openscale/: mod.rs
crates/wxctl-providers/src/pa_workspace/: mod.rs
crates/wxctl-providers/src/planning_analytics/: mod.rs
crates/wxctl-providers/src/vault/: mod.rs
crates/wxctl-providers/src/watsonx_ai/: mod.rs
crates/wxctl-providers/src/watsonx_data/: mod.rs
crates/wxctl-providers/src/watsonx_orchestrate/: mod.rs
crates/wxctl-providers/tests/: deployment_overlay.rs
crates/wxctl-schema/: Cargo.toml  build.rs
crates/wxctl-schema-compiler/: Cargo.toml
crates/wxctl-schema-compiler/src/: build_meta.rs  definition.rs  deployment.rs  lib.rs  merge.rs  overlay.rs  parser.rs  validation.rs
crates/wxctl-schema-compiler/src/codegen/: ir.rs  mod.rs  tables.rs
crates/wxctl-schema/src/: dependency_graph.golden  dependency_graph.rs  deployment.rs  descriptor.rs  explain.rs  graph_export.rs  ir.rs  ir_support.rs  ir_views.rs  lib.rs  linkages.yaml  render.rs  resource.rs
crates/wxctl-schema/src/schema/: definition.rs  mod.rs  overlay.rs  parser.rs
crates/wxctl-schema/src/validation/: config.rs  cross_resource.rs  dependency.rs  mod.rs  readiness.rs  schema.rs  types.rs
crates/wxctl-schema/tests/: ir_effective_equivalence.rs  ir_parse_equivalence.rs  small_stack_guard.rs
crates/wxctl-sdk/: Cargo.toml
crates/wxctl-sdk/src/: client.rs  error.rs  json.rs  lib.rs  testing.rs
crates/wxctl-sdk/src/snapshots/: wxctl_sdk__json__tests__execute_output.snap  wxctl_sdk__json__tests__plan_output.snap  wxctl_sdk__json__tests__plan_output_with_advisory.snap  wxctl_sdk__json__tests__test_output.snap  wxctl_sdk__json__tests__validate_output.snap
crates/wxctl-sdk/tests/: live.rs
crates/wxctl-sdk/tests/fixtures/: collaborator_chain.yaml  connected_tool.yaml  full_chain.yaml  kb_and_tool.yaml  mcp_toolkit_agent.yaml  mcp_toolkit_node_invocation.yaml  mcp_toolkit_python_invocation.yaml  mcp_toolkit_remote_sse.yaml  mcp_toolkit_streamable_http.yaml  openapi_tool_invocation.yaml  openapi_tool_spec.yaml  parallel_test.yaml  simple_chain.yaml  wml_ai_service_invocation.yaml  wml_chain.yaml  wml_function_chain.yaml  wml_function_invocation.yaml  wml_function_openapi_invocation.yaml  wml_function_openapi_spec.yaml  wml_package_extension_e2e.yaml  wml_script_chain.yaml  wml_script_invocation.yaml
crates/wxctl-sdk/tests/live/: agent.rs  collaborator_chain.rs  common_core_connection.rs  connected_tool.rs  connection_basic_auth.rs  connection_oauth2_client_creds.rs  convergence.rs  cpd_common_core.rs  (+43 more)
crates/wxctl/src/: cli.rs  config.rs  main.rs
crates/wxctl/tests/: compose_prompt_parity.rs  compose_scaffold_cli_output_dir.rs  compose_scaffold_validate.rs  examples_no_inline_tool_schema.rs  init_runtime_e2e.rs  init_scaffold_e2e.rs  panel_assertions.rs  panel_snapshots.rs  update_contract.rs  update_download_e2e.rs  update_e2e.rs  validate_linkage_cli.rs
(+525 files in other folders)
