[package]
name = "wxctl-compose-core"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure, wasm-safe compose core: path resolution, prompt assembly, templates — shared by the native and wasm compose surfaces"

[dependencies]
wxctl-schema = { path = "../wxctl-schema", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
