[package]
name = "wxctl-compose"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic compose-pipeline core (identify/paths/prompt/scaffold) shared by the wxctl CLI and the wxctl-mcp server"

[dependencies]
wxctl-core = { path = "../wxctl-core", version = "0.1" }
wxctl-schema = { path = "../wxctl-schema", version = "0.1" }
wxctl-compose-core = { path = "../wxctl-compose-core", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.27"

[lints]
workspace = true
