[package]
name = "wxctl-core"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, traits, and HTTP client for wxctl"

[dependencies]
wxctl-graph = { path = "../wxctl-graph" }
wxctl-schema = { path = "../wxctl-schema", version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["form", "stream"] }
tokio = { workspace = true }
rand = "0.10"
dirs = "6.0"
base64 = "0.22"
semver = { workspace = true }
tracing = { workspace = true }
url = "2.5"
uuid = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
parking_lot = "0.12"

[features]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]

[lints]
workspace = true
