[package]
name = "wxctl-engine"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pipeline orchestration engine for wxctl"

[dependencies]
wxctl-core = { path = "../wxctl-core", version = "0.1" }
wxctl-providers = { path = "../wxctl-providers", version = "0.1" }
wxctl-schema = { path = "../wxctl-schema", version = "0.1" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
dashmap = "6.2"
regex = "1.12"
tokio-util = { version = "0.7", features = ["rt"] }

[lints]
workspace = true
