[package]
name = "wxctl-providers"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Resource type schemas and handler implementations for wxctl"

[dependencies]
wxctl-core = { path = "../wxctl-core", version = "0.1" }
wxctl-schema = { path = "../wxctl-schema", version = "0.1" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["query"] }
tokio = { workspace = true }
tracing = { workspace = true }
tempfile = "3.27"
zip = "8.6"
blake3 = "1.8"
regex = "1"
flate2 = "1.1.9"
url = "2"
# IBM COS / S3 signing
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
md-5 = "0.11"
base64 = "0.22"
chrono = { workspace = true }
mime_guess = "2.0"

[lints]
workspace = true
