[package]
name = "wxctl-schema"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Wasm-safe schema descriptors, compile-time schema set, dependency graph, and reference rendering for wxctl"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_norway = { workspace = true }
anyhow = { workspace = true }
semver = { workspace = true }
phf = "0.14"
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
wxctl-graph = { path = "../wxctl-graph", version = "0.1" }
wxctl-schema-compiler = { path = "../wxctl-schema-compiler", version = "0.1", optional = true }

[build-dependencies]
serde_norway = { workspace = true }
wxctl-schema-compiler = { path = "../wxctl-schema-compiler", version = "0.1" }

[dev-dependencies]
wxctl-schema-compiler = { path = "../wxctl-schema-compiler", version = "0.1" }

[features]
test-support = ["dep:wxctl-schema-compiler"]

[lints]
workspace = true
