[package]
name = "wxctl-sdk"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "SDK for programmatic access to wxctl"

[dependencies]
wxctl-core = { path = "../wxctl-core", version = "0.1" }
wxctl-engine = { path = "../wxctl-engine", version = "0.1" }
wxctl-providers = { path = "../wxctl-providers", version = "0.1" }
anyhow = { workspace = true }
thiserror = { workspace = true }
heck = "0.5"
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = { workspace = true }

[features]
live-tests = []

[dev-dependencies]
tokio = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
dirs = "6.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tempfile = "3.27"
chrono = { workspace = true }

[lints]
workspace = true
